# AetherEdge

./: .clippy.toml  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.mcp  GOVERNANCE.md  LICENSE  NOTICE  README-CN.md  README.md  SECURITY.md  SUPPORT.md  codecov.yml  deny.toml  docker-compose.yml  glama.json  llms.txt
.githooks/: commit-msg  pre-commit  pre-commit-aether-io
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/aether-domain/: Cargo.toml  README.md
crates/aether-domain/src/: command.rs  error.rs  identity.rs  integration.rs  lib.rs  point.rs
crates/aether-domain/tests/: domain_contract.rs  integration_topology_contract.rs
crates/aether-ports/: Cargo.toml  README.md
crates/aether-ports/src/: audit.rs  cloudlink.rs  control.rs  error.rs  history.rs  integration.rs  lib.rs  live_state.rs  mirror.rs  outbox.rs  secret.rs  uplink.rs
crates/aether-ports/tests/: delegated_device_provider_contract.rs  integration_generation_store_contract.rs  integration_projection_contract.rs  port_contract.rs  secret_resolver_contract.rs
examples/minimal-gateway/: Cargo.toml
examples/minimal-gateway/src/: lib.rs  main.rs
examples/minimal-gateway/tests/: composition_contract.rs
extensions/shm-bridge/: Cargo.toml  README.md
extensions/shm-bridge/src/: events.rs  health.rs  lib.rs  managed.rs  manifest.rs
extensions/shm-bridge/tests/: shm_bridge_contract.rs
firmware/: Cargo.toml  memory.x
firmware/src/: main.rs
libs/aether-config/: Cargo.toml
libs/aether-config/src/: automation.rs  io.rs  lib.rs
libs/aether-config/tests/: safe_distribution_defaults.rs
libs/aether-core/: Cargo.toml
libs/aether-core/src/: codec.rs  frame.rs  lib.rs  shm.rs  types.rs
libs/aether-core/src/codec/: can.rs  dl645.rs
libs/aether-infra/: Cargo.toml
libs/aether-infra/src/: lib.rs  redis.rs  sqlite.rs
libs/aether-infra/src/sqlite/: client.rs  service_config.rs
libs/aether-model/: Cargo.toml  build.rs  build_support.rs
libs/aether-model/src/: error.rs  keyspace.rs  lib.rs  product_lib.rs  service_ports.rs  sunspec.rs  types.rs  validation.rs
libs/aether-model/src/products/: README.md
libs/aether-model/src/sunspec/: expand.rs  model.rs  types.rs
libs/aether-model/src/sunspec/models/json/: model_802.json  model_803.json  model_804.json  model_807.json
libs/aether-model/src/sunspec/models/smdx/: smdx_00802.xml  smdx_00803.xml  smdx_00804.xml  smdx_00807.xml
libs/aether-model/tests/: build_script_portability.rs
libs/aether-routing/: Cargo.toml
libs/aether-routing/src/: batch.rs  lib.rs  loader.rs  routing_cache.rs
libs/aether-routing/tests/: test_routing_cache.rs  test_routing_loader.rs
libs/aether-rtdb/: Cargo.toml
libs/aether-rtdb/src/: cleanup.rs  error.rs  lib.rs  memory_impl.rs  numfmt.rs  redis_impl.rs  time.rs  traits.rs  write_buffer.rs
libs/aether-rtdb/tests/: test_buffer_batch_integration.rs  test_consistency.rs  test_numfmt_precision.rs
libs/aether-rules/: Cargo.toml
libs/aether-rules/benches/: README.md  onchange.rs
libs/aether-rules/src/: error.rs  executor.rs  executor_tests.rs  formula.rs  lib.rs  live_state.rs  logger.rs  parser.rs  point_watch_dispatcher.rs  repository.rs  scheduler.rs  types.rs
libs/aether-rules/tests/: test_reload_rebuilds_pointwatch.rs  test_rule_crud.rs
libs/aether-schema-macro/: Cargo.toml  README.md
libs/aether-schema-macro/src/: attributes.rs  codegen.rs  lib.rs  utils.rs
libs/aether-schema-macro/tests/: test_integration.rs
libs/aether-shm/: Cargo.toml
libs/aether-shm/src/: lib.rs  mmap.rs  raw_ptr.rs  traits.rs
libs/aether-sim/: Cargo.toml
libs/aether-sim/src/: generators.rs  lib.rs
libs/common/: Cargo.toml
libs/common/src/: admin_api.rs  api_types.rs  bootstrap_args.rs  bootstrap_database.rs  bootstrap_system.rs  config_loader.rs  dependency.rs  lib.rs  log_rotation.rs  logging.rs  service_bootstrap.rs  service_config.rs  shutdown.rs  validation.rs  warning_monitor.rs
libs/common/src/test_utils/: schema.rs
libs/errors/: Cargo.toml
libs/errors/src/: lib.rs
services/api/: Cargo.toml
services/api/assets/: calculated_points.sql
services/api/src/: auth.rs  config.rs  db.rs  live_values.rs  main.rs  middleware_auth.rs  models.rs  routes_auth.rs  routes_broadcast.rs  routes_config.rs  routes_homepage.rs  routes_network.rs  service_gateway.rs  state.rs  test_support.rs  ws.rs
services/automation/: Cargo.toml
services/automation/src/: app_state.rs  bootstrap.rs  config.rs  error.rs  instance_data.rs  instance_manager.rs  instance_manager_tests.rs  instance_routing.rs  lib.rs  main.rs  product_loader.rs  reload.rs  routes.rs  routing_loader.rs  rule_routes.rs
services/automation/src/api/: admin_handlers.rs  cloud_sync.rs  dto.rs  global_routing_handlers.rs  health_handlers.rs  instance_management_handlers.rs  instance_query_handlers.rs  product_handlers.rs  property_handlers.rs  routing_management_handlers.rs  routing_query_handlers.rs  single_point_handlers.rs
services/automation/src/infra/: application_control.rs  channel_health.rs  shm_dispatch.rs
services/automation/src/runtime/: dynamic_slot_runtime.rs
services/automation/tests/: common.rs  test_application_control.rs  test_config.rs  test_instance_crud_complete.rs  test_instance_lifecycle.rs  test_product_api.rs  test_refresh_routing.rs  test_rule_routes.rs  test_shm_dispatch.rs  test_uds_notification.rs
tools/simulator/: Cargo.toml
tools/simulator/scenarios/: bms_charge.yaml  bms_full.yaml  e2e_battery.yaml  e2e_battery_can.yaml  e2e_diesel.yaml  e2e_diesel_j1939.yaml  e2e_load.yaml  e2e_microgrid.yaml  e2e_pv.yaml  genset_rtu.yaml  modbus_protocol_verification.yaml  multi_device.yaml  network_fault.yaml  pcs_full.yaml  pcs_normal.yaml  pv_daily.yaml
tools/simulator/scripts/: test_protocol_verification.py
tools/simulator/src/: can_sender.rs  coils.rs  devices.rs  http_api.rs  j1939_sender.rs  main.rs  rtu_server.rs  scenarios.rs  server.rs  state_machine.rs  writable.rs
(+876 files in other folders)
