[package]
name = "aether-sim"
publish = false
version.workspace = true
edition = "2024"
description = "Waveform generation library for AetherEMS simulation"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
