[package]
name = "simulator"
publish = false
version.workspace = true
edition = "2024"
description = "Modbus TCP slave simulator for AetherEMS CI testing"

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
# Core library
aether-sim = { path = "../../libs/aether-sim" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serial port for RTU
tokio-serial = "5.4"

# Random number generation
rand = "0.8.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yml = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# HTTP API for state observability
axum = "0.8"
serde_json = "1.0"

# J1939 encoding (external crate)
voltage_j1939 = { version = "0.1", optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5", optional = true }

[features]
default = []
can = ["dep:socketcan"]
j1939 = ["can", "dep:voltage_j1939"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
